...
                      MaterialPageRoute(builder: (context) => const SaveGameListScreen()),
                    );
                  },
                ),
                const SizedBox(height: 20),
                _buildMenuButton(
                  text: "Spiel Erstellen",
                  onTap: () {
                    Navigator.push(
                      context,
                      MaterialPageRoute(builder: (context) => const SetupScreen()),
                    );
                  },
...
                                color:
                                    Color(0xFFF4EAD4),
                                strokeWidth: 3,
                              ),
                            )
                          : const Text(
                              "Abenteuer Beginnen",
                              style: TextStyle(
                                fontSize: 20,
                                fontWeight:
                                    FontWeight.bold,
                              ),
                            ),
...
